# aaltofood

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
aaltofood/: controller.py  model.py  restraunt.py  view.py
tests/: test_aaltofood.py
