[tool.poetry]
name = "aaltofood"
version = "0.1.0"
description = ""
authors = ["Mohammad Moein <mohammad.moein@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
PyQt6 = "^6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
