[tool.poetry]
name = "aaltofood"
version = "0.1.0"
description = ""
authors = ["Mohammad Moein <mohammad.moein@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
PyQt6 = "^6"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
